[package]
name = "todoproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
clap = { version = "4.5.4", features = ["derive"] }
deadpool-postgres = "0.13.0"
env_logger = "0.11.3"
futures-util = "0.3.30"
log = "0.4.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tokio-postgres = "0.7.10"
auth-service-api = {version = "*", git = "https://github.com/innexgo/auth-service-api", features=["client"]}
todoproxy-api = {version = "*", git = "https://github.com/pimpale/todoproxy-api", branch="standalone"}
derive_more = "0.99.17"
actix-ws = "0.2.5"
tokio-stream = { version = "0.1.15", features = ["sync"] }
rand = "0.8.5"
openssl = { version = "0.10", features = ["vendored"] }
