[package]
name = "todoproxy"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
clap = { version = "4.5.31", features = ["derive"] }
deadpool-postgres = "0.14.1"
env_logger = "0.11.6"
futures-util = "0.3.31"
log = "0.4.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
tokio-postgres = "0.7.13"
auth-service-api = {version = "*", git = "https://github.com/innexgo/auth-service-api", features=["client"]}
todoproxy-api = {version = "*", git = "https://github.com/pimpale/todoproxy-api", branch="standalone"}
derive_more = { version = "2.0.1", features = ["full"] }
actix-ws = "0.3.0"
tokio-stream = { version = "0.1.17", features = ["sync"] }
rand = "0.9.0"
openssl = { version = "0.10", features = ["vendored"] }
actix-cors = "0.7.0"
