[package]
name = "todoproxy"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.11.0"
clap = { version = "4.5.40", features = ["derive"] }
deadpool-postgres = "0.14.1"
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-postgres = "0.7.13"
auth-service-api = {version = "*", git = "https://github.com/innexgo/auth-service-api", features=["client"]}
derive_more = { version = "2.0.1", features = ["full"] }
actix-ws = "0.3.0"
tokio-stream = { version = "0.1.17", features = ["sync"] }
rand = "0.9.1"
openssl = { version = "0.10", features = ["vendored"] }
actix-cors = "0.7.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
